Fix #364 Slight trophy icon overlap on entry pages

--- a/assets/css/entry.css
+++ b/assets/css/entry.css
@@ -414,7 +414,7 @@
   & .entry-results__category-medal {
     position: static;
     display: inline-block;
-    margin-right: -6px;
+    margin-right: -4px;
   }
 
   &:empty {
